/*
* File: asv.proto
* Version: 0.1.0
* ----
* Copyright (c) 360 Shuke Corporation. All rights reserved.
*/

syntax = "proto3";

// FYI: It was first set as "com.360shuke.aibot", but is not a valid package name,
// so, it is ended as "com.qihoo.shuke.aibot"
package com.qihoo.shuke.aibot.vmatch.proto;

option java_multiple_files = true;
option java_package = "com.qihoo.shuke.aibot.vmatch.proto";
option java_outer_classname = "ASRProto";

option go_package = "com.qihoo.shuke.aibot/vmatch/proto";

// option objc_class_prefix = "RTG";

service SpeechMatch {
    // create dialogue
    rpc init(InitRequest) returns (InitResponse) {} 

    // stream recogize
    rpc match_stream(stream Request) returns (stream Response) {} 

    // wholly recogize
    rpc match_response(Request) returns (Response) {}

    // destory dialogue
    rpc terminate(TerminateRequest) returns (TerminateResponse) {}
}

//Meta information for audio data
message AudioSpec {
    // false: little endian(default), true: big endian
    bool reverses_bytes = 1; 
    // num channels (default 1)
    uint32 num_channels = 2;
    // sample rate (default 8000)
    uint32 sample_rate = 3;
    // bits per sample (default 16)
    uint32 bits_per_sample = 4;
    // format
//     uint32 audio_format = 5;
}

message InitRequest {
    string session = 1;       // session ID
    AudioSpec audio_info = 2; // audio information
    string appCode = 3;       //业务编码
	  string customer = 4;      //自定义字段，扩展字段
}

message ErrorMessage {
    int32 error_code = 1;      // error code. 0: succeed, other value: failed
    string error_message = 2;  // describe the detail reasons if failed
}

message InitResponse {
    string session = 1;
    ErrorMessage error_message = 2;
}

message Request {
    string session = 1;   // session ID
    bytes audio_data = 2; // 语音流
}

message Response {
    string session = 1;  // session ID
	  string status = 2;   // 状态， 1成功，表示找到了对应的匹配值，0失败，表示没找到对应的值
    string number = 3;   // 当status=1，number表示找到的对应的值
    float score = 4;     // 相识度得分
    string bdumber = 5; // 当status=1，number表示找到的对应的值
    float bdscore = 6;   // 相识度得分
	  string appCode = 7;  // 业务编码，区分不同的业务
    string customer = 8; // 自定义字段，或者做扩展字段使用
    string msg = 9;      // 当失败时，失败的原因
    ErrorMessage error_message = 10;
}

message TerminateRequest {
    // session ID
    string session = 1; 
}

message TerminateResponse {
    // error code. 0: succeed, other value: failed
    int32 error_code = 1;
    ErrorMessage error_message = 2;
}


//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  ./vmatch.proto